tests/baselines/reference/jsdocAbstract1.errors.txt
tests/cases/conformance/jsdoc/jsdocAbstract1.js(4,1): error TS2511: Cannot create an instance of an abstract class.


==== tests/cases/conformance/jsdoc/jsdocAbstract1.js (1 errors) ====
    /** @abstract */
    class A {
    }
    new A()
    ~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    